<resources>
    <string name="app_name">MaGIS</string>
    <string name="error">Invalid</string>
    <string name="success">Success</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Full Name</string>
    <string name="phoneno">Phone No</string>
    <string name="save">Save</string>
    <string name="register">Register</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="mosque">Mosque</string>
    <string name="favourite">Favourite</string>
    <string name="account">Account</string>
    <string name="api_key_android">AIzaSyDk8MR3y9_I8PBUlj95WgvYsrNzxeavg9E </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_slider_menu">sliderMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_drawer">drawer</string>
    <string name="title_activity_home">HomeActivity</string>

    <!--list ustaz-->
    <string name="action_search">Search</string>
    <string name="title_activity_view_reminder">viewReminder</string>

</resources>
