<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/logo_w_h"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:src="@mipmap/ic_launcher_mosque" />

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_user"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/name"
            android:nextFocusDown="@id/edit_text_email"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark" />


        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_mail"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@id/edit_text_password"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorPrimaryDark" />


        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_pass"
            android:drawablePadding="5dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:nextFocusDown="@id/edit_text_phone"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/edit_text_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:drawableLeft="@drawable/ic_phone"
            android:drawablePadding="5dp"
            android:hint="@string/phoneno"
            android:inputType="number"
            android:maxLength="10"
            android:nextFocusDown="@id/button_register"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorPrimaryDark" />



        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBtnLogin"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />



    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

</RelativeLayout>